--- a/BudgetHelper/BudgetHelper/Styles/FrameStyles.xaml
+++ b/BudgetHelper/BudgetHelper/Styles/FrameStyles.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     xmlns:local="BudgetHelper.Styles.FrameStyles">
     <Style x:Key="MainButtonBlackFrame" TargetType="{x:Type Frame}">
-        <Setter Property="BorderColor" Value="Black"/>
+        <Setter Property="BorderColor" Value="#262D2C"/>
         <Setter Property="BackgroundColor" Value="Transparent"/>
         <Setter Property="VerticalOptions" Value="Center"/>
         <Setter Property="HorizontalOptions" Value="Center"/>
