--- a/BudgetHelper/BudgetHelper/Pages/MainPage.xaml
+++ b/BudgetHelper/BudgetHelper/Pages/MainPage.xaml
@@ -3,7 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              NavigationPage.HasNavigationBar="false" 
              x:Class="BudgetHelper.Pages.MainPage"
-             xmlns:resources="clr-namespace:BudgetHelper.Localization">
+             xmlns:resources="clr-namespace:BudgetHelper.Localization"
+             xmlns:converters="clr-namespace:BudgetHelper.Helpers.Converters">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:BoolToProductStatusConverter x:Key="BoolToProductStatusConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <Grid>
             <BoxView Scale="4" AnchorX="1" AnchorY="0" BackgroundColor="#23A605"/>
@@ -23,10 +29,11 @@
                                 <StackLayout Grid.Column="0" Orientation="Vertical">
                                     <Label Text="{Binding Name}" VerticalTextAlignment="Center"/>
                                     <Label Text="{x:Static resources:AppResources.BroughtDate}" />
+                                    <Label Text="{x:Static resources:AppResources.ExpireDate}" />
+                                    <Label Text="{x:Static resources:AppResources.DaysToExpireAfterOpening}" />
                                 </StackLayout>
                                 <StackLayout Grid.Column="1" Orientation="Vertical">
-                                    <Label Text="{Binding IsOpen}" VerticalTextAlignment="Center"/>
-                                    <Label Text="{Binding DaysToExpireAfterOpening}" VerticalTextAlignment="Center"/>
+                                    <Label Text="{Binding IsOpen, Converter={StaticResource BoolToProductStatusConverter}}" VerticalTextAlignment="Center"/>
                                     <Label Text="{Binding BroughtDate}" VerticalTextAlignment="Center"/>
                                     <Label Text="{Binding ExpireDate}" VerticalTextAlignment="Center"/>
                                     <Label Text="{Binding ExpireDateAfterOpen}" VerticalTextAlignment="Center"/>
