--- a/BudgetHelper/BudgetHelper/Pages/AddProductPage.xaml
+++ b/BudgetHelper/BudgetHelper/Pages/AddProductPage.xaml
@@ -23,7 +23,7 @@
                 <Entry Placeholder="{x:Static resources:AppResources.ProductNameInput}" Text="{Binding NewProduct.Name}" 
                        FontSize="20" PlaceholderColor="Gray">
                     <Entry.Behaviors>
-                        
+
                     </Entry.Behaviors>
                 </Entry>
                 <Label VerticalTextAlignment="End" FontSize="15"
@@ -41,8 +41,10 @@
                 </StackLayout>
             </StackLayout>
             <Button Grid.ColumnSpan="2" HorizontalOptions="End" VerticalOptions="End" FontSize="50" Margin="0,0,15,15" Command="{Binding SaveProductCommand}" FontFamily="FA6R" Text="&#xf058;" TextColor="Green">
-              
+
             </Button>
+            <Grid Grid.ColumnSpan="2" BackgroundColor="Gray" Opacity="0.7" IsVisible="{Binding IsLoading, Mode=TwoWay}"/>
+            <ActivityIndicator Grid.ColumnSpan="2" IsRunning="{Binding IsLoading, Mode=TwoWay}" Color="Green" Margin="150"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
