Buttons for edit/delete, edit product view

--- a/BudgetHelper/BudgetHelper/Pages/EditProductPage.xaml
+++ b/BudgetHelper/BudgetHelper/Pages/EditProductPage.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              NavigationPage.HasNavigationBar="false" 
              xmlns:resources="clr-namespace:BudgetHelper.Localization"
              xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              xmlns:converters="clr-namespace:BudgetHelper.Helpers.Converters"
-             x:Class="BudgetHelper.Pages.AddProductPage">
+             x:Class="BudgetHelper.Pages.EditProductPage">
     <ContentPage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
             <Setter Property="TextColor" Value="Red" />
